--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/router": "^14.1.3",
     "@syncfusion/ej2": "^20.2.44",
+    "@syncfusion/ej2-angular-charts": "^20.2.45",
     "ajax": "0.0.4",
     "cldr-data": "^36.0.0",
     "cors": "^2.8.5",
     "fanci": "^0.8.0",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "golden-layout": "^1.5.9",
     "guid-typescript": "^1.0.9",
     "jdenticon": "^3.2.0",
     "jquery": "^3.5.1",
-    "golden-layout": "^1.5.9",
     "ngx-golden-layout": "0.0.40",
     "ngx-indexed-db": "^11.0.2",
     "ngx-jdenticon": "^1.0.4",
